--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -568,7 +568,7 @@
 .header__cart-list-item {
     padding-left: 0;
     list-style: none;
-    height: 50vh; 
+    max-height: 50vh; 
     /* view port */
     overflow-y: auto;
 }
