--- a/assest/css/responsive.css
+++ b/assest/css/responsive.css
@@ -94,6 +94,19 @@
         left: 0;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     }
+    .app__content {
+        margin: 0 4px;
+    }
+
+    .pagination-item {
+        margin: 0;
+    }
+
+    .pagination-item__link {
+        --height: 28px;
+        font-size: 1.6rem;
+        min-width: 36px;
+    }
 
     @keyframes mobileSearch {
         from {
