--- a/assest/css/grid.css
+++ b/assest/css/grid.css
@@ -274,21 +274,32 @@
     
 }
 
-/* PC medium */
+/* PC medium  resolution */
 @media (min-width: 1113px) {
     .row {
         margin-left: -12px;
         margin-right: -12px;
     }
+    .row.sm-gutter {
+        margin-left: -5px;
+        margin-right: -5px;
+        
+    }
     .col {
         padding-left: 12px;
         padding-right: 12px;
+    }
+    .row.sm-gutter .col{
+        padding-left: 5px;
+        padding-right: 5px;
     }
     .l-0 {
         display: none;
     }
     .l-1,
-    .l-2,.l-3,.l-4,
+    .l-2,
+    .l-2-4,
+    .l-3,.l-4,
     .l-5,
     .l-6,.l-7,.l-8,.l-9,.l-10,
     .l-11,.l-12 {
@@ -301,6 +312,10 @@
     .l-2 {
         flex: 0 0 16.66667%;
         max-width: 16.66667%;
+    }
+    .l-2-4 {
+        flex: 0 0 20%;
+        max-width: 20%;
     }
     
     .l-3 {
@@ -406,15 +421,26 @@
         margin-left: -12px;
         margin-right: -12px;
     }
+    .wide .row.sm-gutter {
+        margin-left: -5px;
+        margin-right: -5px;
+    }
     .wide .col {
         padding-left: 12px;
         padding-right: 12px;
+    }
+    .wide .row.sm-gutter .col {
+        padding-left: 5px;
+        padding-right:  5px;
     }
     .wide .l-0 {
         display: none;
     }
     .wide .l-1,
-    .wide .l-2,.wide .l-3,.wide .l-4,
+    .wide .l-2,
+    .wide .l-2-4,
+    .wide .l-3,
+    .wide .l-4,
     .wide .l-5,
     .wide .l-6,.wide .l-7,.wide .l-8,.wide .l-9,.wide .l-10,
     .wide .l-11,.wide .l-12 {
@@ -427,6 +453,10 @@
     .wide .l-2 {
         flex: 0 0 16.66667%;
         max-width: 16.66667%;
+    }
+    .wide .l-2-4 {
+        flex: 0 0 20%;
+        max-width: 20%;
     }
     
     .wide .l-3 {
